@@ -76,4 +76,46 @@ sys.exit(0)
 
     test.run(status=2)
 
+test.write('SConstruct', """\
+import sys
+delattr(sys, 'version_info')
+sys.version = '2.3b1 (#0, Feb 24 2003, 19:13:11)\\n'
+EnsurePythonVersion(1,3)
+sys.exit(0)
+""")
+
+test.run()
+
+test.write('SConstruct', """\
+import sys
+delattr(sys, 'version_info')
+sys.version = '2.3+ (#0, Feb 24 2003, 19:13:11)\\n'
+EnsurePythonVersion(2,2)
+sys.exit(0)
+""")
+
+test.run()
+
+test.write('SConstruct', """\
+import sys
+delattr(sys, 'version_info')
+sys.version = '2.3b1 (#0, Feb 24 2003, 19:13:11)\\n'
+EnsurePythonVersion(2,3)
+sys.exit(0)
+""")
+
+test.run()
+
+test.write('SConstruct', """\
+import sys
+delattr(sys, 'version_info')
+sys.version = '2.3b1 (#0, Feb 24 2003, 19:13:11)\\n'
+EnsurePythonVersion(2,4)
+sys.exit(0)
+""")
+
+test.run(status=2)
+
+
+
 test.pass_test()
